--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </style>
     </head>
     <body>
+    <center>
     <h1 title="Calculator">Calculator 🖩</h1>
     <label id="label-for-1st-number">First number:
     <!-- Input for 1st number -->
@@ -92,6 +93,7 @@
     <span id="note">
     If you want to use Euler's number in a calculation then paste it in here: <a href="https://google.com/search?rlz=1CAJQUA_enUS921&q=e+%3D&stick=H4sIAAAAAAAAAOMwf8RoxC3w8sc9YSnNSWtOXmNU5uJyTsxJLs1JLMkvEhLl4nKtKChKLS7OzM8TYpdi5WJOVbDlWcQKogCeUtK7PQAAAA&sa=X&ved=2ahUKEwiCt-y56KXtAhUvRTABHd2oDgYQ6RMwLXoECBEQAg&biw=1517&bih=750&safe=active&ssui=on">Link</a>
     </span>
+    </center>
     <!-- Now the javascript -->
     <script>
     var result = document.getElementById("Result")
