--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         }
         body {
             background: linear-gradient(blue, orange, yellow, pink, green, red);
+            text-align: center;
         }
         h1, h2 {
             color: red;
