--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         body {
             background: linear-gradient(blue, orange, yellow, pink, green, red);
             text-align: center;
+            padding: 20px;
         }
         h1, h2 {
             color: red;
